--- a/public/offline.html
+++ b/public/offline.html
@@ -606,11 +606,15 @@
             try {
                 const cache = await caches.open(CACHE_NAME);
                 const response = await cache.match(url);
-                if (!response) return null;
+                if (!response) {
+                    console.warn("Cache match failed for:", url, "in", CACHE_NAME);
+                    return null;
+                }
                 const blob = await response.blob();
                 return URL.createObjectURL(blob);
             } catch (e) {
                 console.error("Cache error", e);
+                // alert("خطأ في الكاش: " + e.message);
                 return null;
             }
         }
@@ -821,11 +825,13 @@
 
                 // Auto-redirect to downloads page when back online
                 if (!sessionStorage.getItem('reloaded_online')) {
-                    // SAVE STATE FOR HANDOFF
+                    // ALWAYS TRY TO SAVE STATE FOR HANDOFF IF PLAYING
+                    // We check if audio is active or we have a selected track
                     if (currentTrackIndex >= 0 && allTracks[currentTrackIndex]) {
                         try {
                             const track = allTracks[currentTrackIndex];
-                            const sourceUrl = track.audioUrl || track.src || track.url; // Try multiple properties for safety
+                            // Ensure we catch the correct property
+                            const sourceUrl = track.audioUrl || track.src || track.url;
 
                             if (sourceUrl) {
                                 const handoffState = {
@@ -841,16 +847,17 @@
                                     timestamp: Date.now()
                                 };
                                 localStorage.setItem('offline_handoff', JSON.stringify(handoffState));
-                                console.log('Saved offline handoff state:', handoffState);
+                                console.log('[Offline] Saved handoff state:', handoffState);
                             } else {
-                                console.warn('Skipped handoff save: No audio source found for track', track);
+                                console.warn('[Offline] Skipped handoff: No source URL', track);
                             }
                         } catch (e) {
-                            console.error('Failed to save handoff state', e);
+                            console.error('[Offline] Failed to save handoff', e);
                         }
                     }
 
-                    window.location.href = '/downloads';
+                    // Force navigation
+                    window.location.replace('/downloads');
                     sessionStorage.setItem('reloaded_online', 'true');
                 }
 
